--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Date Picker Non-Modal Dialog Example | WAI-ARIA Authoring Practices 1.1</title>
+<title>Date Picker Dialog Example | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -15,7 +15,7 @@
 
 <link href="css/datepicker.css" rel="stylesheet">
 <script src="js/datepickerDay.js" type="text/javascript"></script>
-<script src="js/nonmodal-datepicker.js" type="text/javascript"></script>
+<script src="js/datepicker.js" type="text/javascript"></script>
 <script src="js/calendar-button.js" type="text/javascript"></script>
 </head>
 <body>
@@ -28,16 +28,16 @@
     </ul>
   </nav>
   <main>
-    <h1>Date Picker Non-Modal Dialog Example</h1>
+    <h1>Date Picker Dialog Example</h1>
     <p>
       <strong>NOTE:</strong> This example page is work in progress.
       Please provide feedback in
       <a href="https://github.com/w3c/aria-practices/issues/1046">issue 1046.</a>
     </p>
     <p>
-      The date picker example below implements the <a href="../../#dialog-modal">non-modal dialog design pattern</a>.
+      The date picker example below implements the <a href="../../#dialog-modal">dialog design pattern</a>.
       The date picker dialog box in this example is opened when keyboard focus is moved to the calendar button and a <kbd>space</kbd>, <kbd>return</kbd>, <kbd>down arrow</kbd> key pressed or clicking on the calendar button.
-      The non-modal dialog appears on activation of the button and can be closed using the OK or Cancel button.   The date picker dialog uses a <code>grid</code> pattern to show and select a date using the cursor keys.  Additional buttons in the dialog box can be used for changing the month and year shown in the grid.
+      The dialog appears on activation of the button and can be closed using the OK or Cancel button.   The date picker dialog uses a <code>grid</code> pattern to show and select a date using the cursor keys.  Additional buttons in the dialog box can be used for changing the month and year shown in the grid.
     </p>
   <section>
     <h2 id="ex_label">Example</h2>
@@ -74,7 +74,7 @@
         <div id="id-datepicker-1"
              class="datepickerDialog"
              role="dialog"
-             aria-modal="false"
+             aria-modal="true"
              aria-labelledby="id-dialog-label">
 
           <div class="header">
@@ -539,10 +539,10 @@
               </tr>
               <tr data-test-id="datepicker-dialog-aria-modal">
                 <td></td>
-                <th scope="row"><code>aria-modal=<q>false</q></code></th>
+                <th scope="row"><code>aria-modal=<q>true</q></code></th>
                 <td><code>div</code></td>
                 <td>
-                  Identifies that dialog box as a non-modal dialog box.
+                  Identifies that dialog box as a modal dialog box.
                 </td>
               </tr>
               <tr data-test-id="datepicker-dialog-aria-labelledby">
