--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3294,7 +3294,7 @@
         Several HTML sectioning elements automatically create ARIA landmark regions.
         So, in order to provide assistive technology users with a logical view of a page,
         it is important to understand the effects of using HTML sectioning elements.
-        [[HTML-ARIA]] contains more information on HTML element role mapping</a>.
+        [[HTML-ARIA]] contains more information on HTML element role mapping.
       </p>
       <table class="widget-features">
         <caption>Default landmark roles for HTML sectioning elements</caption>
