Naming and describing section: Remove bibliography reference
PR #994 included changes to common/biblio.js that should not have been merged
because that file is maintained outside the aria-practices repository.
The change was addition of a reference to an external site.
This commit removes the common/biblio.js changes and the reference to them.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4060,7 +4060,7 @@ However, most authors do not need detailed understanding of the algorithms since
  &lt;tr>&lt;td>30 May &lt;td>Closed
  &lt;tr>&lt;td>6 June &lt;td>11:00-16:00
 &lt;/table></code></pre>
-          <p>The following example gives the table a number ("Table 1") so it can be referenced. [[?CALORIC-RESTRICTION]]</p>
+          <p>The following example gives the table a number (<q>Table 1</q>) so it can be referenced. </p>
           <pre><code>&lt;table>
  &lt;caption>Table 1. Traditional dietary intake of Okinawans and other Japanese circa 1950&lt;/caption>
  &lt;thead>
@@ -4077,6 +4077,7 @@ However, most authors do not need detailed understanding of the algorithms since
   [...]
 
 &lt;/table></code></pre>
+          <p>Note: Above table content is from <a href="https://www.ncbi.nlm.nih.gov/pubmed/17986602">Caloric restriction, the traditional Okinawan diet, and healthy aging: the diet of the world's longest-lived people and its potential impact on morbidity and life span</a>.</p>
           <p>Similarly, the HTML <code>figure</code> element can be given a caption using the <code>figcaption</code> element. The caption can appear before or after the figure, but it is more common for figures to have the caption after.</p>
           <pre><code>&lt;figure>
  &lt;img alt="Painting of a person walking in a desert." src="Hole_JesusalDesierto.jpg">
