Fix tests, add two attribute tests

--- a/examples/carousel/carousel-1.html
+++ b/examples/carousel/carousel-1.html
@@ -400,7 +400,7 @@
               </td>
               <td>Provides a label that describes the content in the carousel region.</td>
             </tr>
-            <tr data-test-id="carousel-aria-live-off">
+            <tr data-test-id="carousel-aria-live">
                 <td></td>
                 <th scope="row">
                   <code>aria-live=<q>off</q></code>
@@ -416,7 +416,7 @@
                   </ul>
                 </td>
               </tr>
-              <tr data-test-id="carousel-aria-live-polite">
+              <tr data-test-id="carousel-aria-live">
                 <td></td>
                 <th scope="row">
                   <code>aria-live=<q>polite</q></code>
