Naming Rule 3: Remove mention of alt attribute
Per feedback from @LJWatson in issue #1050, revises rule 3 to remove mention of alt.
Adds sentence refering readers to the naming techniques for specific advantages of using HTML features instead of ARIA.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3796,8 +3796,9 @@ However, most authors do not need detailed understanding of the algorithms since
         <section id="naming_rule_native_techniques">
           <h5>Rule 3: Prefer Native Techniques</h5>
           <p>
-            In HTML documents, whenever possible, rely on HTML naming techniques, such as the HTML <code>label</code> element, <code>alt</code> attribute for images, <code>caption</code> element for tables, etc.
+            In HTML documents, whenever possible, rely on HTML naming techniques, such as the HTML <code>label</code> element for form elements  and <code>caption</code> element for tables.
             While less flexible, their simplicity and reliance on visible text help ensure robust accessible experiences.
+            Several of the <a href="#naming_techniques">naming techniques</a> highlight specific accessibility advantages of using HTML features instead of ARIA attributes.
           </p>
         </section>
 
