added data-date attribute to buttons in calendar gird, removed aria-describedby from calendar button, started to move dialog status message to be inside the dialog box

--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -66,11 +66,7 @@
             <span class="fa fa-calendar-alt fa-2x"></span>
           </button>
 
-          <div id="id-datepicker-1-button-desc" hidden>Opens datepicker dialog for previous date textbox</div>
-
         </div>
-
-        <div class="message" role="status"></div>
 
         <div id="id-datepicker-1"
              class="datepickerDialog"
@@ -190,6 +186,10 @@
             <button class="dialogButton" value="cancel">Cancel</button>
             <button class="dialogButton" value="ok">OK</button>
           </div>
+
+        <div class="message" role="status">
+
+        </div>
 
         </div>
       </div>
@@ -507,14 +507,6 @@
               <td><code>button</code></td>
               <td>
                 Provides a reference to a screen reader for direct navigation to the date picker dialog box.
-              </td>
-            </tr>
-            <tr data-test-id="calendar-button-aria-describedby">
-              <td></td>
-              <th scope="row"><code>aria-describedby=<q>IDREF</q></code></th>
-              <td><code>button</code></td>
-              <td>
-                Provides a description to the user that calendar button is used to change the value of the textbox.
               </td>
             </tr>
           </tbody>
