--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -32,12 +32,14 @@
     <p>
       <strong>NOTE:</strong> This example page is work in progress.
       Please provide feedback in
-      <a href="https://github.com/w3c/aria-practices/issues/1046">issue 1046.</a>
+      <a href="https://github.com/w3c/aria-practices/pull/1054">pull request 1054.</a>
     </p>
     <p>
-      The date picker example below implements the <a href="../../#dialog-modal">dialog design pattern</a>.
-      The date picker dialog box in this example is opened when keyboard focus is moved to the calendar button and a <kbd>space</kbd> or <kbd>return</kbd> key pressed or clicking on the calendar button.
-      The dialog appears on activation of the button and can be closed using the OK or Cancel button.   The date picker dialog uses a <code>grid</code> pattern to show and select a date using the cursor keys.  Additional buttons in the dialog box can be used for changing the month and year shown in the grid.
+      The example below includes a date input field and a button that opens a date picker that implements the <a href="../../#dialog-modal">dialog design pattern</a>.
+      The dialog contains a calendar that uses the <a href="../../#grid">grid pattern</a> to present buttons that enable the user to choose a day from the calendar.
+      Choosing a date from the calendar closes the dialog and populates the date input field. 
+      If the input field is empty or does not contain a valid date when the dialog is opened, the current date is focused in the calendar. 
+      Otherwise, focus is placed on the day in the calendar that matches the value of the date input field.
     </p>
   <section>
     <h2 id="ex_label">Example</h2>
