--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3702,9 +3702,9 @@
     </p>
     <p>
       Providing elements with accessible names, and where appropriate, accessible descriptions is one of the most important responsibilities authors have when developing accessible web experiences.
-      While doing so is straightforward for most elements, technical mistakes that can have devastating impacts on users of assistive technologies are easy to make and unfortunately common.
-      To help authors provide effective and reliable accessible names and descriptions, this section explains their purpose, when authors need to provide them, how browsers assemble them, and rules for coding and composing them.
-      It also provides guidance for effectively employing the following naming and describing techniques and WAI-ARIA properties:
+      While doing so is straightforward for most elements, technical mistakes that can completely block users of assistive technologies are easy to make and unfortunately common.
+      To help authors effectively provide accessible names and descriptions, this section explains their purpose, when authors need to provide them, how browsers assemble them, and rules for coding and composing them.
+      It also guides authors in the use of the following naming and describing techniques and WAI-ARIA properties:
     </p>
     <ul>
       <li>Naming:
