--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4035,9 +4035,16 @@ However, most authors do not need such detailed understanding of the algorithms 
 
         <section id="naming_with_captions">
           <h5>Naming Tables and Figures with Captions</h5>
-          <p>The accessible name for the HTML <code>table</code> and <code>figure</code> elements can be derived from a child <code>caption</code> or <code>figcaption</code> element, respectively.</p>
-          <p>Tables and figures often have a caption to explain what the table of figure is about, how to read them, and sometimes giving them numbers to be able to refer to them in surrounding prose. This can help users navigate and understand the content better. This is generally useful for all users, but especially for users of assistive technologies.</p>
-          <p>In HTML, the <code>table</code> element marks up a data table, and can be provided with a caption using the <code>caption</code> element.</p>
+          <p>
+            The accessible name for HTML <code>table</code> and <code>figure</code> elements can be derived from a child <code>caption</code> or <code>figcaption</code> element, respectively.
+            Tables and figures often have a caption to explain what they are about, how to read them, and sometimes giving them numbers used to refer to them in surrounding prose.
+            Captions can help all users better understand content, but are especially helpful to users of assistive technologies.
+          </p>
+          <p>
+            In HTML, the <code>table</code> element marks up a data table, and can be provided with a caption using the <code>caption</code> element.
+            If the <code>table</code> element does not have <code>aria-label</code> or <code>aria-labelledby</code>, then the <code>caption</code> will be used as the accessible name.
+            For example, the accessible name of the following table is <q>Special opening hours</q>.
+          </p>
           <pre><code>&lt;table>
  &lt;caption>Special opening hours&lt;/caption>
  &lt;tr>&lt;td>30 May &lt;td>Closed
@@ -4061,12 +4068,23 @@ However, most authors do not need such detailed understanding of the algorithms 
 
 &lt;/table></code></pre>
           <p>Note: Above table content is from <a href="https://www.ncbi.nlm.nih.gov/pubmed/17986602">Caloric restriction, the traditional Okinawan diet, and healthy aging: the diet of the world's longest-lived people and its potential impact on morbidity and life span</a>.</p>
-          <p>Similarly, the HTML <code>figure</code> element can be given a caption using the <code>figcaption</code> element. The caption can appear before or after the figure, but it is more common for figures to have the caption after.</p>
+          <p>
+            If a <code>table</code> is named using <code>aria-label</code> or <code>aria-labelledby</code>, then a <code>caption</code> element, if present, will become an accessible description.
+            For an example, see <a href="#describing_with_captions">Describing Tables and Figures with Captions</a>.
+          </p>
+          <p>
+            Similarly, an HTML <code>figure</code> element can be given a caption using the <code>figcaption</code> element.
+            The caption can appear before or after the figure, but it is more common for figures to have the caption after.
+          </p>
           <pre><code>&lt;figure>
  &lt;img alt="Painting of a person walking in a desert." src="Hole_JesusalDesierto.jpg">
  &lt;figcaption>Jesus entering the desert as imagined by William Hole, 1908&lt;/figcaption>
 &lt;/figure></code></pre>
-
+          <p>
+            Like with <code>table</code> elements, if a <code>figure</code> is not named using <code>aria-label</code> or <code>aria-labelledby</code>, the content of the <code>figcaption</code> element will be used as the accessible name.
+            However unlike <code>table</code> elements, if the <code>figcaption</code> element is not used for the name, it does not become an accessible description unless it is referenced by <code>aria-describedby</code>. 
+            Nevertheless, assistive technologies will render the content of a <code>figcaption</code> regardless of whether it is used as a name, description, or neither.
+          </p>
           <p>Using the <code>caption</code> element to name a <code>table</code> element, or a <code>figcaption</code> element to name a <code>figure</code> element, satisfies <a href="#naming_rule_visible_text">Rule 2: Prefer Visible Text</a> and <a href="#naming_rule_native_techniques">Rule 3: Prefer Native Techniques</a>.</p>
         </section>
 
@@ -5088,8 +5106,11 @@ So, As advised by <a href="#naming_rule_avoid_fallback">Rule 4: Avoid Browser Fa
 
         <section id="describing_with_captions">
           <h5>Describing Tables and Figures with Captions</h5>
-          <p>In HTML, a <code>table</code> element can get its accessible description from the child <code>caption</code> element, if that wasn't used as the accessible name.</p>
-          <p>For example, a preceding heading might be appropriate as an accessible name for a table, and the <code>caption</code> element can contain a longer description of the table and how the table is laid out. In such a situation, the <code>aria-labelledby</code> attribute can be used on the <code>table</code> to set the accessible name to that of the heading.</p>
+          <p>
+            In HTML, if the <code>table</code> is named using <code>aria-label</code> or <code>aria-labelledby</code>, a child <code>caption</code> element becomes an accessible description.
+            For example, a preceding heading might serve as an appropriate accessible name, and the <code>caption</code> element might contain a longer description.
+            In such a situation, <code>aria-labelledby</code> could be used on the <code>table</code> to set the accessible name to the heading content and the <code>caption</code> would become the accessible description.
+          </p>
           <pre><code>&lt;h2 id="events-heading">Upcoming events&lt;/h2>
 &lt;table aria-labelledby="events-heading">
  &lt;caption>
