--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -37,8 +37,8 @@
     <p>
       The example below includes a date input field and a button that opens a date picker that implements the <a href="../../#dialog-modal">dialog design pattern</a>.
       The dialog contains a calendar that uses the <a href="../../#grid">grid pattern</a> to present buttons that enable the user to choose a day from the calendar.
-      Choosing a date from the calendar closes the dialog and populates the date input field. 
-      If the input field is empty or does not contain a valid date when the dialog is opened, the current date is focused in the calendar. 
+      Choosing a date from the calendar closes the dialog and populates the date input field.
+      If the input field is empty or does not contain a valid date when the dialog is opened, the current date is focused in the calendar.
       Otherwise, focus is placed on the day in the calendar that matches the value of the date input field.
     </p>
   <section>
@@ -59,7 +59,7 @@
                 aria-autocomplete="none">
 
           <button class="icon"
-            aria-label="Calendar"
+            aria-label="Choose Date"
             aria-expanded="false"
             aria-haspopup="dialog"
             aria-controls="id-datepicker-1"
@@ -552,6 +552,17 @@
                 <td><code>div</code></td>
                 <td>
                   Defines the accessible name for the dialog box.
+                </td>
+              </tr>
+              <tr data-test-id="datepicker-dialog-status">
+                <td scope="row"><code>status</code></td>
+                <th></th>
+                <td><code>div</code></td>
+                <td>
+                  <ul>
+                    <li>A live region to display information about the keyboard commands to navigate the grid of dates.</li>
+                    <li>The display of the information is slightly delayed so the screen reader reads it after information related to the change of focus in the date.</li>
+                  </ul>
                 </td>
               </tr>
             </tbody>
