--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -214,7 +214,7 @@
     <h3>Date Textbox</h3>
 
     <ul>
-      <li>Contains the date value.</li>
+      <li>Contains the selected date value.</li>
     </ul>
 
     <h3>Calendar Button</h3>
