--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -62,7 +62,6 @@
             aria-label="Choose Date"
             aria-expanded="false"
             aria-haspopup="dialog"
-            aria-controls="id-datepicker-1"
             aria-describedby="id-datepicker-1-button-desc"
             >
             <span class="fa fa-calendar-alt fa-2x"></span>
@@ -90,11 +89,11 @@
               <span class="fas fa-angle-left fa-lg"></span>
             </button>
 
-            <span id="id-dialog-label"
+            <h2 id="id-dialog-label"
                   class="monthYear"
-                  role="status">
+                  aria-live="polite">
               Month Year
-            </span>
+            </h2>
 
             <button class="nextMonth"
               aria-label="next month"
@@ -189,7 +188,7 @@
             <button class="dialogButton" value="ok">OK</button>
           </div>
 
-          <div class="message" role="status">
+          <div class="message" aria-live="polite">
             Test
           </div>
 
@@ -209,7 +208,7 @@
       <li>Date Picker Dialog Box: Displays a grid of dates for the user to select from and provides additional buttons to change the month and year of dates shown in the grid.</li>
     </ul>
 
-    <p>The <code>textbox</code> has the accessible name of <q>Date</q> and <code>button</code> has the accessible name of <q>Calendar<q>.</p>
+    <p>The <code>textbox</code> has the accessible name of <q>Date</q> and <code>button</code> has the accessible name of <q>Choose Date<q>.</p>
 
     <h3>Date Textbox</h3>
 
@@ -501,14 +500,6 @@
                 </ul>
               </td>
             </tr>
-            <tr data-test-id="calendar-button-aria-controls">
-              <td></td>
-              <th scope="row"><code>aria-controls=<q>IDREF</q></code></th>
-              <td><code>button</code></td>
-              <td>
-                Provides a reference to a screen reader for direct navigation to the date picker dialog box.
-              </td>
-            </tr>
           </tbody>
         </table>
       </section>
@@ -554,9 +545,9 @@
                   Defines the accessible name for the dialog box.
                 </td>
               </tr>
-              <tr data-test-id="datepicker-dialog-status">
-                <td scope="row"><code>status</code></td>
+              <tr data-test-id="datepicker-dialog-aria-live">
                 <th></th>
+                <td scope="row"><code>aria-live=<q>polite</q></code></td>
                 <td><code>div</code></td>
                 <td>
                   <ul>
@@ -610,11 +601,11 @@
                       Defines the accessible name of the button (e.g. "Next Year").
                     </td>
                 </tr>
-                <tr data-test-id="datepicker-change-date-button-role-status">
-                    <th scope="row"><code>status</code></th>
-                    <td></td>
+                <tr data-test-id="datepicker-change-date-aria-live">
+                    <th></th>
+                    <td scope="row"><code>aria-live=<q>polite</q></code></td>
                     <td>
-                      <code>span</code>
+                      <code>h2</code>
                     </td>
                     <td>
                       <ul>
