updated initial label for the group to us 'current value'

--- a/examples/spinbutton/datepicker-spinbuttons.html
+++ b/examples/spinbutton/datepicker-spinbuttons.html
@@ -49,7 +49,7 @@
            aria-labelledby="myDatepickerLabel myDatepickerDate">
 
            <h3 id="myDatepickerLabel">Date</h3>
-           <div hidden id="myDatepickerDate">Friday, June 30th, 2019</div>
+           <div hidden id="myDatepickerDate">current value is Friday, June 30th, 2019</div>
 
         <div  class="day spinbutton"
               role="spinbutton"
