Provide richer description of screen reader behavior in section 5.1 per feedback from @jongund in issue #1050.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3749,8 +3749,15 @@
       <p>
         An accessible description is also an author-provided string that is rendered by assistive technologies.
         Authors supply a description when there is a need to associate additional information with an element, such as instructions or format requirements for an input field.
-        Because they are usually significantly longer than names, assistive technologies present descriptions differently from names and other element attributes.
-        For instance, a screen reader may announce a description of an element after its name, role, value (if any), and relevant states or properties.
+      </p>
+      <p>
+        assistive technologies present names differently from descriptions.
+        For instance, screen readers typically announce the name and role of an element first, e.g., a button named <q>Mute Conversation</q>could be spoken as <q>Mute Conversation button</q>.
+        If an element has a state, it could be announced either before or after the name and role; after name and role is the typical default.
+         For example, a switch button named <q>Mute Conversation</q> in the <q>off</q> state could be announced as <q>Mute Conversation switch button off</q>.
+        Because descriptions are optional strings that are usually significantly longer than names, they are presented last, sometimes after a slight delay.
+        For example, <q>Mute Conversation Switch button off, Silences alerts and notifications about activity in this conversation.</q>
+        To reduce verbosity, some screen readers do not announce descriptions by default but instead inform users of their presence so that users can press a key that will announce the description. 
       </p>
     </section>
 
