Editorial revisions to accessibility features

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -218,20 +218,12 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
         When a toolbar item has focus, its border is highlighted and the background color of the button also changes.
       </li>
     </ul>
-    <h3>Popup Label</h3>
+    <h3>Button Popup Labels</h3>
+    <p>The bold, italic, underline, and text align buttons have popup labels that implement the requirements of <a href="https://www.w3.org/TR/WCAG21/#content-on-hover-or-focus">WCAG Success Criterion 1.4.13 Content on Hover or Focus</a>:</p>
     <ul>
-      <li>
-        When the bold, italic, underline or the text align buttons receive focus or the mouse overs over the button a popup appears above the button with a text label for the button.
-      </li>
-      <li>
-        The popup label remains visible when the pointer hovers over the label content.
-      </li>
-      <li>
-       The popup label can be hidden at any time using the <kbd>ESC</kbd> key.
-      </li>
-      <li>
-       This popup label implements the requirements of <a href="https://www.w3.org/TR/WCAG21/#content-on-hover-or-focus">WCAG Success Criterion 1.4.13 Content on Hover or Focus</a>.
-      </li>
+      <li>When a bold, italic, underline, or text align button receives focus or mouse hover, a popup appears above the button revealing its text label.</li>
+      <li>The popup label remains visible when the pointer hovers over the label content.</li>
+      <li>Pressing <kbd>Esc</kbd> hides the popup label .</li>
     </ul>
   </section>
 
