Editorial revision to toolbar esc key documentation

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -280,9 +280,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
           </tr>
           <tr data-test-id="toolbar-toggle-esc">
             <th><kbd>ESC</kbd></th>
-            <td>
-              Hides any visible popup label for a button.
-            </td>
+            <td>If a button popup label is visible, hides it.</td>
           </tr>
         </tbody>
       </table>
