Remove Enter key from checkbox documentation and data-test-id attribute

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -490,8 +490,8 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
           </tr>
         </thead>
         <tbody>
-          <tr data-test-id="toolbar-checkbox-enter-or-space">
-            <th><kbd>Enter</kbd><br><kbd>Space</kbd></th>
+          <tr data-test-id="toolbar-checkbox-space">
+            <th><kbd>Space</kbd></th>
             <td>Toggles the state of the checkbox.</td>
           </tr>
         </tbody>
